--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -253,6 +253,26 @@
                                 </p>
                             </header>
                             <div class="card-content pt-0">
+                                <div class="columns is-multiline mb-4" id="libraryStatsContainer">
+                                    <div class="column is-4">
+                                        <div class="box is-shadowless border bg-light-soft p-3">
+                                            <p class="heading opacity-50 mb-1">Total de Jogos</p>
+                                            <p class="title is-4 has-text-primary" id="statGamesCount">--</p>
+                                        </div>
+                                    </div>
+                                    <div class="column is-4">
+                                        <div class="box is-shadowless border bg-light-soft p-3">
+                                            <p class="heading opacity-50 mb-1">Total de Arquivos</p>
+                                            <p class="title is-4 has-text-primary" id="statFilesCount">--</p>
+                                        </div>
+                                    </div>
+                                    <div class="column is-4">
+                                        <div class="box is-shadowless border bg-light-soft p-3">
+                                            <p class="heading opacity-50 mb-1">Total em Disco</p>
+                                            <p class="title is-4 has-text-primary" id="statLibrarySize">--</p>
+                                        </div>
+                                    </div>
+                                </div>
                                 <div class="table-container mb-5">
                                     <table class="table is-fullwidth" id="pathsTable">
                                         <thead>
@@ -980,6 +1000,10 @@
         // Initial load for specific tabs
         if (target === 'Tags') fillTagsTable();
         if (target === 'Activity') fillActivityLogs();
+        if (target === 'Library') {
+            fillLibraryTable();
+            fillLibraryStats();
+        }
     });
 
     // File Input Helper
@@ -1014,6 +1038,14 @@
                     `);
                 });
             }
+        });
+    }
+
+    function fillLibraryStats() {
+        $.getJSON('/api/stats', (data) => {
+            $('#statGamesCount').text(data.library?.total_titles || 0);
+            $('#statFilesCount').text(data.identification?.total_files || 0);
+            $('#statLibrarySize').text(data.library?.total_size_formatted || '0 B');
         });
     }
 
